--- a/ClientApp/src/app/Forms/Master/sauda/sauda-dialog/add-sauda.component.html
+++ b/ClientApp/src/app/Forms/Master/sauda/sauda-dialog/add-sauda.component.html
@@ -1,7 +1,7 @@
-<h2 class="heading mb-10">SaudaMaster</h2>
+<h2 class="heading mb-0">Sauda Master</h2>
 <form [formGroup]="saudaForm" (ngSubmit)="onSubmit(saudaForm.value)" fxLayout="row wrap" class="user-form">
     <div class="white-block pb-5">
-        <h3>SaudaMaster Details</h3>
+        <h3>Sauda Master Details</h3>
         <div class="tab-party-details-parent">
             <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
                 <mat-form-field class="example-full-width" appearance="outline">
@@ -9,12 +9,12 @@
                     <input
                     matInput
                     aria-label="ItemObj"
-                    [matAutocomplete]="auto"
+                    [matAutocomplete]="auto3"
                     [formControl]="itemCtrl"
-                    formControlName="itemName"
+                    formControlName="*ItemName"
                     />
                     <mat-error *ngIf="saudaForm.controls.ItemName.errors?.required">Please select ACGroup</mat-error>                
-                    <mat-autocomplete #auto="matAutocomplete" (optionSelected)='getSelectedItem($event.option)'>
+                    <mat-autocomplete #auto3="matAutocomplete" (optionSelected)='getSelectedItem($event.option)'>
                     <mat-option
                         *ngFor="let itemObj of filteredItem | async"
                         [value]="itemObj.item2"
@@ -24,6 +24,90 @@
                     </mat-autocomplete>
                 </mat-form-field>
             </div>
+            <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
+                <mat-form-field appearance="outline">
+                    <mat-label>Sauda Code</mat-label>
+                    <input matInput autocomplete="off" placeholder="" formControlName="saudaCode" type="text">
+                    <mat-error *ngIf="saudaForm.controls.saudaCode.errors?.required">saudaCode is required</mat-error>                
+                </mat-form-field> 
+            </div>
+            <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
+                <mat-form-field appearance="outline">
+                    <mat-label>Maturity</mat-label>
+                    <input matInput [matDatepicker]="Maturity">
+                    <mat-datepicker-toggle matSuffix [for]="Maturity"></mat-datepicker-toggle>
+                    <mat-datepicker #Maturity></mat-datepicker>
+                </mat-form-field>                  
+            </div>
+            <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
+                <mat-form-field class="example-full-width" appearance="outline">
+                    <mat-label>Instrument Type</mat-label>
+                    <input
+                    matInput
+                    aria-label="InstrumentObj"
+                    [matAutocomplete]="auto3"
+                    [formControl]="instrumentCtrl"
+                    formControlName="*InstrumentName"
+                    />
+                    <mat-error *ngIf="saudaForm.controls.InstrumentName.errors?.required">Please select ACGroup</mat-error>                
+                    <mat-autocomplete #auto3="matAutocomplete" (optionSelected)='getSelectedInstrument($event.option)'>
+                    <mat-option
+                        *ngFor="let instrumentObj of filteredInstrument | async"
+                        [value]="instrumentObj.item2"
+                        [id]="instrumentObj.item1">
+                        <span>{{instrumentObj.item2}}</span>
+                    </mat-option>
+                    </mat-autocomplete>
+                </mat-form-field>
+            </div>
+            <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
+                <mat-form-field class="example-full-width" appearance="outline">
+                    <mat-label>Option Type</mat-label>
+                    <input
+                    matInput
+                    aria-label="OptionObj"
+                    [matAutocomplete]="auto3"
+                    [formControl]="optionCtrl"
+                    formControlName="*OptionName"
+                    />
+                    <mat-error *ngIf="saudaForm.controls.OptionName.errors?.required">Please select ACGroup</mat-error>                
+                    <mat-autocomplete #auto3="matAutocomplete" (optionSelected)='getSelectedOption($event.option)'>
+                    <mat-option
+                        *ngFor="let optionObj of filteredOption | async"
+                        [value]="optionObj.item2"
+                        [id]="optionObj.item1">
+                        <span>{{optionObj.item2}}</span>
+                    </mat-option>
+                    </mat-autocomplete>
+                </mat-form-field>
+            </div>
+            <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
+                <mat-form-field appearance="outline">
+                    <mat-label>Strike Price</mat-label>
+                    <input matInput autocomplete="off" placeholder="" formControlName="strikePrice" type="text">
+                    <mat-error *ngIf="saudaForm.controls.strikePrice.errors?.required">strikePrice is required</mat-error>                
+                </mat-form-field> 
+            </div>
+            <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
+                <mat-form-field appearance="outline">
+                    <mat-label>First Trading Date</mat-label>
+                    <input matInput [matDatepicker]="FirstTradingDate">
+                    <mat-datepicker-toggle matSuffix [for]="FirstTradingDate"></mat-datepicker-toggle>
+                    <mat-datepicker #FirstTradingDate></mat-datepicker>
+                </mat-form-field>                  
+            </div>
+            <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
+                <mat-form-field appearance="outline">
+                    <mat-label>Last Trading Date</mat-label>
+                    <input matInput [matDatepicker]="LastTradingDate">
+                    <mat-datepicker-toggle matSuffix [for]="LastTradingDate"></mat-datepicker-toggle>
+                    <mat-datepicker #LastTradingDate></mat-datepicker>
+                </mat-form-field>                  
+            </div>
         </div>
+    </div>
+    <div fxFlex="100" class="mt-2 text-center space-between-btns">
+        <button mat-raised-button color="warn" (click)="close()">Cancel</button>            
+        <button mat-raised-button color="primary" class="uppercase" type="submit">Save</button> 
     </div>
 </form>
