--- a/ClientApp/src/app/Forms/Master/item/item-dialog/add-item.component.html
+++ b/ClientApp/src/app/Forms/Master/item/item-dialog/add-item.component.html
@@ -4,25 +4,15 @@
         <h3>Item</h3>
         <div class="tab-party-details-parent">
             <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
-                <mat-form-field class="example-full-width" appearance="outline">
-                    <mat-label>Exchange</mat-label>
-                    <input
-                    matInput
-                    aria-label="ExchangeObj"
-                    [matAutocomplete]="auto"
-                    [formControl]="ExchangeCtrl"
-                    formControlName="ExchangeName"
-                    />
-                    <mat-error *ngIf="itemForm.controls.ExchangeName.errors?.required">Please select ACGroup</mat-error>                
-                    <mat-autocomplete #auto="matAutocomplete" (optionSelected)='getSelectedExchange($event.option)'>
-                    <mat-option
-                        *ngFor="let ExchangeObj of filteredExchange | async"
-                        [value]="ExchangeObj.item2"
-                        [id]="ExchangeObj.item1">
-                        <span>{{cityObj.item2}}</span>
-                    </mat-option>
-                    </mat-autocomplete>
-                </mat-form-field>
+              <mat-form-field class="example-full-width" appearance="outline">
+                <mat-label>Exchange</mat-label>
+                <mat-select placeholder="Select Tax" formControlName="ExId">
+                  <mat-option *ngFor="let exchange of exchangeList" [value]="exchange.id">
+                    {{exchange.name}}
+                  </mat-option>
+                </mat-select>
+
+              </mat-form-field>
             </div>
             <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
                 <mat-form-field appearance="outline">
@@ -48,8 +38,8 @@
             <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
                 <mat-form-field appearance="outline">
                     <mat-label>lot size value multiplier</mat-label>
-                    <input matInput autocomplete="off" placeholder="lot size value multiplier" formControlName="lotSize" type="text">
-                    <mat-error *ngIf="itemForm.controls.lotSize.errors?.required">lot size value multiplier is required</mat-error>                
+                    <input matInput autocomplete="off" placeholder="lot size value multiplier" formControlName="lotSizeValueMultiplier" type="number">
+                    <mat-error *ngIf="itemForm.controls.lotSizeValueMultiplier.errors?.required">lot size value multiplier is required</mat-error>                
                 </mat-form-field> 
             </div>
             <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
@@ -63,12 +53,12 @@
                 <mat-checkbox formControlName="ApplyCtt">Apply Ctt</mat-checkbox>
             </div>
             <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50" class="pt-5 pb-5 pl-10">
-                <mat-checkbox formControlName="ApplyRMF">Apply Risk Management Fees</mat-checkbox>
+                <mat-checkbox formControlName="applyRiskManagementFees">Apply Risk Management Fees</mat-checkbox>
             </div>
         </div>
     </div>
     <div fxFlex="100" class="mt-2 text-center space-between-btns">
         <button mat-raised-button color="warn" (click)="close()">Cancel</button>            
-        <button mat-raised-button color="primary" class="uppercase" type="submit">Save</button> 
+        <button mat-raised-button color="primary" class="uppercase" [disabled]="!itemForm.valid" type="submit">Save</button> 
     </div>
 </form>
