--- a/ClientApp/src/app/Forms/Master/sauda/sauda.component.html
+++ b/ClientApp/src/app/Forms/Master/sauda/sauda.component.html
@@ -1,9 +1,18 @@
 <div class="row">
-    <div fxLayout="row" class="mt-2 flex-end">
-      <button mat-raised-button color="accent" (click)="openSaudaDialog(null)">
-        <mat-icon>person_add</mat-icon> Add Sauda
-      </button>
-    </div>
+  <div fxLayout="row" class="mt-2 flex-end">
+    <button mat-raised-button color="accent" (click)="openDialog(null)">
+      <mat-icon>person_add</mat-icon> Add Sauda
+    </button>
+  </div>
+  <div class="col-xl-12 mt-2">
+    <ag-grid-angular style=" height: 535px;"
+                     class="ag-theme-alpine"
+                     [rowData]="itemList"
+                     [pagination]="true"
+                     [columnDefs]="columnDefs"
+                     [defaultColDef]="agGridOptions.defaultColDef"
+                     (cellClicked)="onGridClick($event)">
+    </ag-grid-angular>
+  </div>
 </div>
-  
   
