--- a/ClientApp/src/styles.scss
+++ b/ClientApp/src/styles.scss
@@ -105,8 +105,15 @@ $material-icons-font-path: '~material-icons/iconfont/';
     }
 
     .mat-dialog-container {
-      //padding: 15px 24px 24px 24px;
-     padding: 10px 10px 10px 10px;
+        padding: 15px;
+        .mat-dialog-content {
+            margin: 0;
+            padding: 0 0 15px 0;
+        }
+        .mat-dialog-actions {
+            min-height: auto;
+            margin-bottom: 0;
+        }
     }
   }
 }
