Product creation form

--- a/ClientApp/src/app/Forms/Master/product/product-dialog/add-product.component.html
+++ b/ClientApp/src/app/Forms/Master/product/product-dialog/add-product.component.html
@@ -44,8 +44,8 @@
             <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
                 <mat-form-field appearance="outline">
                     <mat-label>Isin Size</mat-label>
-                    <input matInput autocomplete="off" placeholder="" formControlName="isinSize" type="text">
-                    <mat-error *ngIf="productForm.controls.isinSize.errors?.required">isinSize is required</mat-error>                
+                    <input matInput autocomplete="off" placeholder="" formControlName="isincode" type="text">
+                    <mat-error *ngIf="productForm.controls.isincode.errors?.required">isincode is required</mat-error>                
                 </mat-form-field> 
             </div>
             <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
