--- a/ClientApp/src/app/Forms/Master/contract-master/contract-master.component.html
+++ b/ClientApp/src/app/Forms/Master/contract-master/contract-master.component.html
@@ -1,7 +1,17 @@
 <div class="row">
-    <div fxLayout="row" class="mt-2 flex-end">
-      <button mat-raised-button color="accent" (click)="openCompanyDialog(null)">
-        <mat-icon>assignment</mat-icon> Add ContractMaster
-      </button>
-    </div>
+  <div fxLayout="row" class="mt-2 flex-end">
+    <button mat-raised-button color="accent" (click)="openCompanyDialog(null)">
+      <mat-icon>assignment</mat-icon> Add ContractMaster
+    </button>
+  </div>
+  <div class="col-xl-12 mt-2">
+    <ag-grid-angular style=" height: 535px;"
+                     class="ag-theme-alpine"
+                     [rowData]="contractList"
+                     [pagination]="true"
+                     [columnDefs]="columnDefs"
+                     [defaultColDef]="agGridOptions.defaultColDef"
+                     (cellClicked)="onGridClick($event)">
+    </ag-grid-angular>
+  </div>
 </div>  
