--- a/ClientApp/src/app/Forms/Dialog/confirmation-dialog/error-dialog.component.html
+++ b/ClientApp/src/app/Forms/Dialog/confirmation-dialog/error-dialog.component.html
@@ -4,6 +4,6 @@
   </p>
 </mat-dialog-content>
 <mat-dialog-actions align="center">
-  <button mat-raised-button color="primary" (click)="onConfirmClick()" tabindex="1">{{confirmButtonText}}</button>
-  <button mat-raised-button mat-dialog-close tabindex="-1">{{cancelButtonText}}</button>
+  <button mat-raised-button color="danger" (click)="onConfirmClick()" tabindex="1">{{confirmButtonText}}</button>
+ 
 </mat-dialog-actions>
